--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ header,
 .view {
     height: 100%;
 }
-.loader {
+/*.loader {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -37,7 +37,7 @@ header,
     margin-left: -10rem;
     margin-top: -10rem;
     cursor : wait;
-  }
+  }*/
 
  
 
