--- a/css/style.css
+++ b/css/style.css
@@ -254,8 +254,8 @@ nav{
     margin-left: auto;
     margin-right: auto;
     top:22%;
-    left:25%;
-    right: 25%;
+    left:0;
+    right:0;
     width:50%;
     height:50%;
     opacity: 1;
