--- a/css/style.css
+++ b/css/style.css
@@ -253,9 +253,9 @@ nav{
     background: url('../images/logo-JG-white-opacity.svg') no-repeat center  !important;
     margin-left: auto;
     margin-right: auto;
-    top:22%;
+    top:5%;
     left:0;
-    right:0;
+    right:25%;
     width:50%;
     height:50%;
     opacity: 1;
