--- a/css/style.css
+++ b/css/style.css
@@ -253,11 +253,11 @@ nav{
     background: url('../images/logo-JG-white-opacity.svg') no-repeat center  !important;
     margin-left: auto;
     margin-right: auto;
-    top:5%;
+    top:10vh;
     left:0;
-    right:25%;
-    width:50%;
-    height:50%;
+    right:25vw;
+    width:50vw;
+    height:50vh;
     opacity: 1;
     background-repeat: no-repeat !important;
     background-size: contain !important;
