--- a/css/style.css
+++ b/css/style.css
@@ -253,10 +253,12 @@ nav{
     background: url('../images/logo-JG-white-opacity.svg') no-repeat center  !important;
     margin-left: auto;
     margin-right: auto;
-    top:15vh;
-
+    top:10vh;
     width:50vw;
     height:50vh;
+    left:0;
+    right: 0;
+
     opacity: 1;
     background-repeat: no-repeat !important;
     background-size: contain !important;
