--- a/css/style.css
+++ b/css/style.css
@@ -253,10 +253,10 @@ nav{
     background: url('../images/logo-JG-white-opacity.svg') no-repeat center  !important;
     margin-left: auto;
     margin-right: auto;
-    top:16vh;
+    top:1%;
     width:50vw;
     height:50vh;
-    left:-0.2%;
+    left:--50%;
     right:0;
 
     opacity: 1;
