--- a/css/style.css
+++ b/css/style.css
@@ -253,10 +253,10 @@ nav{
     background: url('../images/logo-JG-white-opacity.svg') no-repeat center  !important;
     margin-left: auto;
     margin-right: auto;
-    top:1%;
+    top:10%;
     width:50vw;
     height:50vh;
-    left:-50%;
+    left:0;
     right:0;
 
     opacity: 1;
