--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap');
-
-*{
-         border:0px solid red;
+:root{
+    --main-color:#43A5BE;
+    --main-color-01:white;
+    --main-color-02:black;
 }
+
+*{border:0px solid red;}
 
 html, body{
     margin: 0px;
     padding: 0px;
-    /*scroll-behavior: smooth;*/
-
 }
-
-body {
-	height: 100% !important;
+ 
+body{
+	height: 100vh !important;
     width: 100%;
-    background: #fff;
 }
 
 html {
@@ -22,13 +22,13 @@ html {
     width: 100%;  
 }
 
-html,
-body,
-header,
-.view {
-    height: 100%;
-}
-/*.loader {
+html, body, header, .view {height: 100%;}
+.preload { width:100px;
+    height: 100px;
+    position: fixed;
+    top: 50%;
+    left: 50%;}
+.preload {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -37,52 +37,44 @@ header,
     margin-left: -10rem;
     margin-top: -10rem;
     cursor : wait;
-  }*/
+  }
+  
 
- 
-
-.navbar {
-    background-color: rgba(67, 165, 190,0.3);
-   /* border-bottom:3px solid  #43a5be; */
-
-    
+  #site-content, #nav-content
+  {visibility:hidden;
 }
 
 
+  .title-part-2,  .title-part-3, .titre-principal, h1, h2, h3.btn-text, h4, h5, h6, p, .navbar-text, a.nav-link, a.dropdown-item,  li,  span.d-block{font-family: montserrat, arial, sans-serif;}
 
+.navbar{background-color: rgba(67, 165, 190,0.3);}
 
-
-.top-nav-collapse {
-    background-color:rgba(0,0,0,1);
-}
+.top-nav-collapse{background-color:var(--main-color-02);}
 
 
 @media only screen and (max-width: 768px) {
-    .navbar {
-        background-color: rgba(0,0,0,1);
+    .navbar {background-color: var(--main-color-02);
     }
 }
-
-
 
 #site-content {
     min-height: 100%;
     min-height: 100vh;
     position: relative;
-    background:#FFF;
+    background:var(--main-color-01);
     z-index: 1;
   /*  visibility:hidden; */
   }
 
 nav{
     z-index:500 !important;
-    /* visibility:hidden; */
+   /* visibility:hidden; */
 }
 
-.btn-suite{color: #43a5be;}
+.btn-suite{color: var(--main-color);}
 
 #hexag-menu-top {
-    border-bottom: 9px solid #43a5be;
+    border-bottom: 9px solid var(--main-color);
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
 }
@@ -91,11 +83,11 @@ nav{
     margin-top: -3px;
     width: 30px;
     height: 15px;
-    background-color: #43a5be;
+    background-color: var(--main-color);
 }
 
 #hexag-menu-bottom {
-    border-top: 9px solid #43a5be;
+    border-top: 9px solid var(--main-color);
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
 }
@@ -129,49 +121,46 @@ nav{
     background-color:rgb(67, 165, 190) !important;
     background-color:rgba(67, 165, 190,0.3) !important;
 }
-.dropdown-item:visited{
-    color:#43a5be!important;
-}
-.dropdown-divider{
-    color:rgb(57, 180, 200) !important;
-}
 
+.dropdown-divider{color:rgb(57, 180, 200) !important;}
 
+.nav-link, .dropdown-item, h1 {text-transform: uppercase;}
 
-
-
-  .nav-link, .dropdown-item, h1 {
-    text-transform: uppercase;
-}
+.dropdown-item{color:var(--main-color)!important;}
   
 /*------- PARALLAX -------*/
 
-#parallax-container {
+
+  #parallax-container {
+      z-index:100;
     /*background-color: white;*/
-    z-index: 1000;
-    /*background-image: radial-gradient(at 50% 150%, #43a5be, #0b1d21);*/
+
+    border: 0px solid lightblue;
     position: relative;
-    overflow: hidden;
+    /*overflow: hidden;*/
     width: 100%;
-    height: 101vh;
-    top: 0;
-    left: 0%;
-    /*transform: translate(-50%, -50%);*/
+    height: 100vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     backface-visibility: hidden;
-}
+  }
+
+
 
 .parallax-wrapper {
     position: absolute;
     /*background: white;*/
     width: 100%;
-    height:100%;
-    top: 0;
-    left: 0;
+    height: 100%;
+    top:50%;
+    left: 0%;
     transform-origin: 50% 50%;
     transform: translate3d(0px, 0px, 0px);
     transform-style: preserve-3d;
     backface-visibility: hidden;
-}
+  }
+  
   
   .parallax-layer {
     transform-style: preserve-3d;
@@ -180,170 +169,161 @@ nav{
     display: block!important;  
     /*transition: transform .1s linear;*/
   }
-
-.background-picture{
-    position: fixed;
-    background: url('../images/cosmo_pyramids576.jpg') no-repeat bottom ;
-
-    z-index: 100 !important;
-    background-size: cover;
  
-    top:0;
-    width: 100%;
-    height: 100%;
-    left:0;
-
-       /*background: rgba(186, 204, 203, 0.5);*/
-    /*
-    filter: grayscale(100%) blur(5px);
-    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='5');
-    -webkit-filter: grayscale(100%) blur(10ppx);
-    -moz-filter: grayscale(100%) blur(10ppx);
-    -ms-filter: grayscale(100%) blur(10ppx);
-    -o-filter: grayscale(100%) blur(10ppx);*/
-}
-.background-picture2{
-   top: 100%;   
-}
-
-  .figure2 {
-    background: rgba(186, 204, 203, 0.5);
-    width: 70%;
-    height: 60%;
-    border-radius: 10%;
-    bottom: 0%;
-    left: 10%;
-  }
-
   .parallax-layer.is-out {
     transform: translate3d(0, 0, 0) !important;
     transition: transform .4s ease-out!important;
   }
-  .parallax {
-    position: relative;
-    background: url("https://images.radio-canada.ca/q_auto,w_1250/v1/ici-info/16x9/eau-mer-dessalement.jpg") no-repeat center center fixed;
-    height: 900px;
+
+ 
+.figure1 {
+    z-index:200;
+    background: url('../images/cosmo_pyramids576.jpg') no-repeat top ;
     background-size: cover;
+    width: 100%!important;
+    height: 100%!important;
+    bottom: 0%;
+    left: 0;
+  }
+  
+  .figure2 {
+      z-index:300;
+    background: #CC1B49;
+    background: url('../images/logo-JG-white-opacity.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 70%;
+    height: 60%;
+    bottom: 30%;
+    left: 10%;
+  }
+  
+
+  
+.figure3  {
+    z-index:150 !important;
+  
+    background: url('../images/white-sunlight576.png') no-repeat center !important;
+    background-repeat: no-repeat;
+    background-size: contain;
+    opacity:1;
     width: 100%;
+    height: 100%;
+    bottom: 0%;
+    left: 0;
+   
 }
+  
+
+
+  .parallax-layer.is-out {
+    transform: translate3d(0, 0, 0) !important;
+    transition: transform .4s ease-out;
+  }
   .white{
-    background-color:rgba(255,255,255,1);
+    background-color: var(--main-color-01);
     z-index:20!important;
     
   }
 /* // Extra small devices (portrait phones, less than 576px) */
 /* // No media query for `xs` since this is the default in Bootstrap */
 
-.under-logo {
-    background: url('../images/white-sunlight576.png') !important;
-    background-repeat: no-repeat !important;
-    background-size: 100% 100% !important;
-    opacity: 1; 
-    margin-left: auto;
-    margin-right: auto;
-    top:20vw;
-    left:1vw;
-    width:100%;
-    height:100%;
-    opacity:0.4;
-    z-index:100 !important;
-}
-
+/* 
 .logo {
-    background: url('../images/logo-JG-white-opacity.svg') no-repeat center  !important;
-    margin-left: auto;
-    margin-right: auto;
-    top:15%;
-    width:50vw;
-    height:50vh;
-    left:0;
-    right:0;
 
+    background: url('../images/logo-JG-white-opacity.svg') no-repeat center  !important;
+    margin:0 auto!important;
+    top:23vh;
+    left:0!important;
+    right:0!important;
+    width:40%;
+    height:40%;
     opacity: 1;
     background-repeat: no-repeat !important;
     background-size: contain !important;
     z-index: 1000!important;
-    /*border:2px solid yellow;*/
 }
+*/
+
   
-#titre-principal {
-    margin-top:35vh;  
+.titre-principal {
+    z-index:400;
+ 
     text-transform: uppercase;
     font-size:3.5vw;
+    z-index: 1000;
     font-weight: 700;
     color: rgba(255,255,255,0.8);
+    line-height:5.5vh;
     text-shadow: 0 0 6px rgba(255,255,255,0.92), 0 0 30px rgba(255,255,255,0.34), 0 0 12px rgba(67,165,190,0.52), 0 0 21px rgba(67,165,190,0.92), 0 0 34px rgba(67,165,190,0.78), 0 0 54px rgba(67,165,190,0.92);
-    padding-top:20%;
-    padding-bottom:10%;
+    margin-top:90vh;
+    
 }
 
 .fa-chevron-down{
     z-index:9999;
-    position:absolute;
-    top:99%;
+    
     left: 50%; /* à 50%/50% du parent référent */
+    right: 50%; /* à 50%/50% du parent référent */
     transform: translate(-50%,-50%); /* décalage de 50% de sa propre taille */     
     padding:6px!important;
     /*font-weight:bolder;*/
     /*border: 2px solid transparent;*/
     /*border-radius: 4px;*/
     border:none !important;
-    color:white;
+    color:var(--main-color-01);
     transition: all 0.3s ease-in 0s;
 }
 
 .phrase {
-    position:relative;
+    position:absolute;
+    top:1000;
     z-index:4000;
-    padding-top:5vh;
-    font-size: 10vw;
+    padding-top:4.5vh;
+    font-size: 12.5vw;
     font-weight: 100;
     letter-spacing: 0.5vw;
-    color: white;
+    color: var(--main-color-01);
 }
-
-h1, h3.btn-text{
-    font-family: montserrat, arial, sans-serif;
-}
-
-
 
 h1{
     margin-top:0.1em!important;
     font-weight:900!important;
     font-size: 1.8em !important;
-    letter-spacing: -0.03em !important;
- 
-   
+    letter-spacing: -0.03em !important;  
 }
 
 .trait{
     margin-left:auto;
     margin-right:auto;
-    background-color: #43a5be;
+    background-color: var(--main-color);
     height: 12px;
     width: 28%;
 }
-
-
-.title-part-2, #titre-principal{
-    font-family: montserrat bold, arial bold, helvetica bold, sans-serif;
-    font-size: 1.8em !important;
+.title-part-2{
     line-height:1em !important;
+}
+
+.title-part-2, .titre-principal{
+    font-weight:bold;
+    font-size: 1.8em !important;
     letter-spacing: -0.03em !important;
 }
 
-p, h5, a.nav-link, a.dropdown-item, .title-part-3, h4, li{font-family: montserrat  regular, arial regular, helvetica regular, sans-serif;}
-h2, span.d-block{font-family: montserrat  thin, arial thin, helvetica thin, sans-serif;}
+p, h5, a.nav-link, a.dropdown-item, .title-part-3, h4, li{
+    font-weight:regular;
+}
+
+h2, span.d-block{font-weight: thin;}
 
 h6{  
-    font-family: montserrat  bold, arial bold, helvetica bold, sans-serif;
+    font-weight: bold;
     font-size: 1.2em !important;
 }
 
 .fa-circle{
     font-size:0.9em !important;
-    color:#43a5be;
+    color:var(--main-color);
 }
 
 .centered {
@@ -372,10 +352,10 @@ h6{
     background-color: rgba(255,255,255,0.7);
     padding-left:3vw;
     padding-right:3vw;
-    color:black;
-    -webkit-text-stroke-color:black;
+    color:var(--main-color-02);
+    -webkit-text-stroke-color:var(--main-color-02);
     text-decoration: none;
-    border:1vw solid black;
+    border:1vw solid var(--main-color-02);
   }
 
   .flip_H{
@@ -394,7 +374,7 @@ h6{
 /* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
     .background-picture{
-        background: url('../images/cosmo_pyramids760.jpg') no-repeat bottom ;
+        background: url('../images/cosmo_pyramids760.jpg') no-repeat center ;
     }
 
     .display-3{
@@ -402,11 +382,16 @@ h6{
     }
 
     .logo {
-        top:25%;
-        left:25%;
-        right: 25%;
-        width:50%;
-        height:50%; 
+        margin-left: 0;
+        margin-right: 0;
+        width:35%;
+        height:35%; 
+    }
+    .logo {
+        top:10%;   
+        margin-left: 0;
+        margin-right: 0;
+      
     }
 
     .under-logo{
@@ -418,15 +403,20 @@ h6{
         z-index:100 !important;
     }
     .phrase {          
-        font-size: 8vw;
+        font-size: 7vw;
         font-weight: 100;
         letter-spacing: 0.2vw;
     }
-    #titre-principal {    
-        margin-top:40vh; 
+    .titre-principal {    
+        margin-top:42vh; 
         font-size: 2.8vw;
-        padding-top:20%;
+        padding-top:13%;
         padding-bottom:10%;
+    }
+
+    .fa-chevron-down{
+        top:91%;
+        font-size:8vw!important;
     }
  
     h1{
@@ -438,7 +428,7 @@ h6{
 
     .trait{
         margin-left:-1.2em!important;
-        background-color: #43a5be;
+        background-color: var(--main-color);
         height: 16px;
         width: 35%;
     }
@@ -458,8 +448,6 @@ h6{
         width:50%;
     }
 
-   
-
     .centered {
         position: absolute;
         top: 50%;
@@ -467,7 +455,7 @@ h6{
         transform: translate(-50%, -50%);
         font-size:4em;
         font-weight:800;
-        color:black
+        color:var(--main-color-02);
       }
 
   
@@ -477,18 +465,18 @@ h6{
 @media (min-width: 768px) {
   
     .background-picture{
-        background: url('../images/cosmo_pyramids992.jpg') no-repeat bottom ;
+        background: url('../images/cosmo_pyramids992.jpg') no-repeat center ;
     }
     .logo {
-        top:26%;
+        top:20%;
         left:25%;
         right: 25%;
-        width:50%;
-        height:50%;
+        width:45%;
+        height:45%;
     }
 
   .under-logo{
-    top:20vw;
+    top:18vw;
     left:1vw;
     width:100%;
     height:100%;
@@ -496,13 +484,13 @@ h6{
     z-index:100 !important;
  }
     .phrase {
-        padding-top:3vh;
-        font-size: 8vw;
+        padding-top:4vh;
+        font-size: 9vw;
         font-weight: 100;
         letter-spacing: 0.3vw;
     }
 
-    #titre-principal {
+    .titre-principal {
         margin-top:33vh; 
         padding-bottom: 0vh;    
         font-size: 3vw;
@@ -510,10 +498,8 @@ h6{
         padding-bottom:10%;  
     }
     .fa-chevron-down{
-        top:96%;
+        top:80%;
     }
-
-  
 
     h1{
         margin-left:0!important;
@@ -561,7 +547,7 @@ h6{
         left:0;
     }
    .logo {
-        top:28%;
+        top:22%;
         left:25%;
         right: 25%;
         width:50%;
@@ -581,13 +567,14 @@ h6{
 
     .phrase {      
         padding-top:5vh;
-        font-size: 8vw;
+        font-size: 11vw;
         font-weight: 100;
         letter-spacing: 0.2vw;
     }
 
-    #titre-principal {   
-        margin-top:19.5vh; 
+    .titre-principal {   
+        margin-top:40vh; 
+        
     }
 
 
@@ -609,7 +596,7 @@ h6{
         border-bottom:3px solid transparent;
       }
     .active:before {
-        border-bottom:3px solid  #43a5be;
+        border-bottom:3px solid  var(--main-color);
       }
 
     .centered {
@@ -629,7 +616,7 @@ h6{
     }
   
     .trait{
-    background-color: #43a5be;
+    background-color: var(--main-color);
     height: 20px;
     width: 50%;
     }
@@ -652,7 +639,7 @@ h6{
     }
 
     .logo {
-        top:28%;   
+        top:25%;   
         margin-left: 0;
         margin-right: 0;
         height:50%;
@@ -670,7 +657,7 @@ h6{
         padding-top:3vh;
         margin-left: auto;
         margin-right: auto;      
-        color: white;
+        color: var(--main-color-01);
         font-size:7vw;
         font-weight: 100;
         letter-spacing: 0;
@@ -691,32 +678,30 @@ h6{
         width: 45%;
     }
 
-    #titre-principal {   
+    .titre-principal {  
+       
         margin-top:35vh;   
         font-size: 2vw;
-        padding-top:8%;
+        padding-top:12%;
         padding-bottom:7%;    
     }
 
 
     .fa-chevron-down{
         top:90%;
+        font-size:vw !important;
     }
     .title-part-1{
         margin-left:-5% !important;
     }
-
-
 }
 
 /* // FIN DES MEDIASQUERIES */
 
-
-
 .contain {
     position: relative;
     text-align: center;
-    color: white;
+    color: var(--main-color-01);
   }
 
  .title-part-2{
@@ -767,7 +752,7 @@ body.modal #site-content{
 }
 
 a.btn.btn-outline-primary{
-    color:  rgba(67, 165, 190,1)!important;
+    color:  var(--main-color)!important;
     border:6px solid  rgba(67, 165, 190,0.7)!important;  
 }
 
@@ -775,7 +760,7 @@ a.btn.btn-outline-primary{
     margin-bottom:0!important;
 }
 
-.cv{ color:#43a5be;}
+.cv{ color:var(--main-color);}
 
 .logos{
     width:100%;
@@ -809,12 +794,8 @@ a.btn.btn-outline-primary{
 
 .fa-chevron-down:hover{
         font-size:8em!important;
-        color:#43a5be!important;
+        color:var(--main-color)!important;
 }
-
-
-
-
   a.dropdown-item:active{
       background-color:rgba(67, 165, 190,0.2)!important;
   }
@@ -825,18 +806,13 @@ a.btn.btn-outline-primary{
   }
 
   .waves-light:active{
-    background-color:#43a5be!important;
+    background-color:var(--main-color)!important;
 
   }
 .navbar-text{
-    font-family: montserrat, arial, sans-serif;
     font-weight:600!important;
-    font-size: 1.2em !important;
-
-   
+    font-size: 1.2em !important; 
     color:rgba(255,255,255,0.5)!important;
-   
- 
 }
 
 textarea {
@@ -844,45 +820,36 @@ textarea {
   }
 
   span.input-group-text, .browser-default, .form-control, .custom-select:active .browser-default:active{
-    
-    background-color:black !important;
-    background-color:rgb(67, 165, 190) !important;
-    border:1px rgb(67, 165, 190) solid !important;
-    color:white !important;
-
+    background-color:var(--main-color-02) !important;
+    background-color:var(--main-color) !important;
+    border:1px var(--main-color) solid !important;
+    color:var(--main-color-01) !important;
     font-weight:100!important;
-    border:2px rgb(67, 165, 190) solid !important;
-   
+    border:2px var(--main-color)solid !important;
   }
 
-  span.input-group-text{
-    padding-right:1px!important;
-    
-   
-  }
- 
+  span.input-group-text{padding-right:1px!important;}
 
   ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color:white !important;
+    color:var(--main-color-01) !important;
     font-weight:100!important;
     opacity: 1; /* Firefox */
-    border:0 rgb(67, 165, 190) solid !important;
-    
+    border:0 var(--main-color)solid !important;
   }
   
   :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color:white !important;
-    border:0 rgb(67, 165, 190) solid !important;
+    color:var(--main-color-01) !important;
+    border:0 var(--main-color)solid !important;
   }
   
   ::-ms-input-placeholder { /* Microsoft Edge */
-    color:white !important;
-    border:0 rgb(67, 165, 190) solid !important;
+    color:var(--main-color-01) !important;
+    border:0 var(--main-color)solid !important;
   }
 
  /*Customisation checkbox*/
   .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-    background-color: rgb(67, 165, 190)!important;
+    background-color: var(--main-color)!important;
   }
   .custom-checkbox .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: 0 0 0 1px #212121, 0 0 0 0.2rem rgba(0, 0, 0, 0.25)!important;
@@ -895,3 +862,28 @@ textarea {
         border:2px rgba(255, 255, 255,0.7) solid !important;
         border-radius: 2px!important;
   }
+
+
+
+  
+
+  
+  .titre-principal {
+    position:absolute;
+    left:0;
+    right:0;
+    top:30vh;
+    text-transform: uppercase;
+    font-size:3.5vw;
+    z-index: 1000;
+    font-weight: 700;
+    color: rgba(255,255,255,0.8);
+    line-height:5.5vh;
+    text-shadow: 0 0 6px rgba(255,255,255,0.92), 0 0 30px rgba(255,255,255,0.34), 0 0 12px rgba(67,165,190,0.52), 0 0 21px rgba(67,165,190,0.92), 0 0 34px rgba(67,165,190,0.78), 0 0 54px rgba(67,165,190,0.92);
+    
+}
+ 
+.fa-angle-down{
+  color:white;
+  margin-top:-10vh;
+}
