--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 html, body{
     margin: 0px;
     padding: 0px;
+    
 }
  
 body{
@@ -64,6 +65,7 @@ html, body, header, .view {height: 100%;}
     background:var(--main-color-01);
     z-index: 1;
   /*  visibility:hidden; */
+ 
   }
 
 nav{
@@ -144,6 +146,7 @@ nav{
     left: 50%;
     transform: translate(-50%, -50%);
     backface-visibility: hidden;
+ 
   }
 
 
@@ -167,12 +170,14 @@ nav{
     backface-visibility: hidden !important;
     position: absolute!important;
     display: block!important;  
+
     /*transition: transform .1s linear;*/
   }
  
   .parallax-layer.is-out {
     transform: translate3d(0, 0, 0) !important;
     transition: transform .4s ease-out!important;
+
   }
 
  
@@ -184,6 +189,7 @@ nav{
     height: 100%!important;
     bottom: 0%;
     left: 0;
+    
   }
   
   .figure2 {
@@ -207,8 +213,8 @@ nav{
     background-repeat: no-repeat;
     background-size: contain;
     opacity:1;
-    width: 100%;
-    height: 100%;
+    width: 70%;
+    height: 70%;
     bottom: 0%;
     left: 0;
    
@@ -258,6 +264,7 @@ nav{
     text-shadow: 0 0 6px rgba(255,255,255,0.92), 0 0 30px rgba(255,255,255,0.34), 0 0 12px rgba(67,165,190,0.52), 0 0 21px rgba(67,165,190,0.92), 0 0 34px rgba(67,165,190,0.78), 0 0 54px rgba(67,165,190,0.92);
     margin-top:90vh;
     
+    
 }
 
 .fa-chevron-down{
@@ -273,6 +280,8 @@ nav{
     border:none !important;
     color:var(--main-color-01);
     transition: all 0.3s ease-in 0s;
+   ;
+
 }
 
 .phrase {
@@ -284,6 +293,8 @@ nav{
     font-weight: 100;
     letter-spacing: 0.5vw;
     color: var(--main-color-01);
+    ;
+
 }
 
 h1{
@@ -396,7 +407,7 @@ h6{
 
     .under-logo{
         top:20vw;
-        left:1vw;
+        left:0vw;
         width:100%;
         height:100%;
         opacity:0.4;
