--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ nav{
       z-index:100;
     /*background-color: white;*/
 
-    border: 0px solid lightblue;
+    border: none;
     position: relative;
     /*overflow: hidden;*/
     width: 100%;
@@ -207,16 +207,17 @@ nav{
 
   
 .figure3  {
-    z-index:150 !important;
+    z-index:250 !important;
   
     background: url('../images/white-sunlight576.png') no-repeat center !important;
     background-repeat: no-repeat;
-    background-size: contain;
-    opacity:1;
-    width: 70%;
-    height: 70%;
-    bottom: 0%;
+    bottom: 33%;
     left: 0;
+    width: 92%;
+    height: 92%;
+  
+    background-size: cover;
+    opacity:0.7;
    
 }
   
