--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,9 @@ html, body, header, .view {height: 100%;}
     }
 }
 
+
+  
+
 #site-content {
     min-height: 100%;
     min-height: 100vh;
@@ -138,7 +141,7 @@ nav{
     /*background-color: white;*/
 
     border: none;
-    position: relative;
+    position: absolute;
     /*overflow: hidden;*/
     width: 100%;
     height: 100vh;
@@ -146,14 +149,18 @@ nav{
     left: 50%;
     transform: translate(-50%, -50%);
     backface-visibility: hidden;
+   
  
   }
 
 
+  
 
-.parallax-wrapper {
+
+
+  .parallax-wrapper {
     position: absolute;
-    /*background: white;*/
+
     width: 100%;
     height: 100%;
     top:50%;
@@ -166,6 +173,7 @@ nav{
   
   
   .parallax-layer {
+
     transform-style: preserve-3d;
     backface-visibility: hidden !important;
     position: absolute!important;
@@ -180,7 +188,10 @@ nav{
 
   }
 
- 
+  
+
+
+
 .figure1 {
     z-index:200;
     background: url('../images/cosmo_pyramids576.jpg') no-repeat top ;
@@ -203,7 +214,7 @@ nav{
     bottom: 45%;
     left: 25%;
   }
-  
+ 
 
   
 .figure3  {
@@ -235,14 +246,11 @@ nav{
 /* // Extra small devices (portrait phones, less than 576px) */
 /* // No media query for `xs` since this is the default in Bootstrap */
 
-/* 
-.logo {
 
+.logo {
     background: url('../images/logo-JG-white-opacity.svg') no-repeat center  !important;
-    margin:0 auto!important;
+    margin:0 0!important;
     top:23vh;
-    left:0!important;
-    right:0!important;
     width:40%;
     height:40%;
     opacity: 1;
@@ -250,23 +258,88 @@ nav{
     background-size: contain !important;
     z-index: 1000!important;
 }
-*/
+
+.under-logo  {
+    z-index:250 !important;
+ 
+    background: url('../images/white-sunlight992.png') no-repeat center !important;
+    background-repeat: no-repeat;
+    bottom: 0%;
+    left: 0;
+    width: 70%;
+    height: 70%;
+  
+    background-size: cover;
+    opacity:0.7;
+   
+}
+
 
   
-.titre-principal {
-    z-index:400;
+.phrase {
+    position:absolute;
+    padding-top:10vh;
+    left: 0 !important;
+     right:0 !important; 
+    z-index:4000;
+    padding-top:4.5vh;
+    font-size: 12.5vw;
+    font-weight: 100;
+    letter-spacing: 0.5vw;
+    color: var(--main-color-02);
+    
+
+}
+
+.logo-jg {
+    z-index:1000;
+    position:absolute;
+    left:0;
+    right:0;
+    height:100vh!important;
+
  
-    text-transform: uppercase;
-    font-size:3.5vw;
+  background: url('../images/cosmo_pyramids576.jpg') no-repeat top ;
+  background-size: cover;
+  
+
+}
+
+#logo-jg {
+   margin-top:20%;
+  width: 50%!important;
+  height: 50%!important;
+
+
+}
+
+
+
+.titre-principal {
     z-index: 1000;
+  
+    position:absolute;
+    text-transform: uppercase;
+    font-size:2vw;
+    
+   
     font-weight: 700;
     color: rgba(255,255,255,0.8);
-    line-height:5.5vh;
+    line-height:4vh;
     text-shadow: 0 0 6px rgba(255,255,255,0.92), 0 0 30px rgba(255,255,255,0.34), 0 0 12px rgba(67,165,190,0.52), 0 0 21px rgba(67,165,190,0.92), 0 0 34px rgba(67,165,190,0.78), 0 0 54px rgba(67,165,190,0.92);
-    margin-top:90vh;
-    
-    
+   
+  
+    left: 0;
+     right:0;  
+  
+    padding-top:-5vh;
+
 }
+
+.fa-angle-down{
+    color:white;
+    margin-top:-5vh;
+  }
 
 .fa-chevron-down{
     z-index:9999;
@@ -285,18 +358,7 @@ nav{
 
 }
 
-.phrase {
-    position:absolute;
-    top:1000;
-    z-index:4000;
-    padding-top:4.5vh;
-    font-size: 12.5vw;
-    font-weight: 100;
-    letter-spacing: 0.5vw;
-    color: var(--main-color-02);
-    ;
 
-}
 
 h1{
     margin-top:0.1em!important;
@@ -385,26 +447,37 @@ h6{
 
 /* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
-    .background-picture{
-        background: url('../images/cosmo_pyramids760.jpg') no-repeat center ;
+ 
+    .logo-jg {
+        z-index:1000;
+        position:absolute;
+        left:0;
+        right:0;
+        top:0;
+        height:100vh!important;
+        margin-top:-6%;
+    
+     
+      background: url('../images/cosmo_pyramids760.jpg') no-repeat top ;
+      background-size: cover;
+      
+    
+    }
+    
+    #logo-jg {
+        margin-top:24% !important;
+      width: 50%!important;
+      height: 50%!important;
+    
+    
     }
 
     .display-3{
         font-size:4em!important;
     }
 
-    .logo {
-        margin-left: 0;
-        margin-right: 0;
-        width:20%;
-        height:20%; 
-    }
-    .logo {
-        top:10%;   
-        margin-left: 0;
-        margin-right: 0;
-      
-    }
+   
+   
 
     .under-logo{
         top:20vw;
@@ -414,17 +487,22 @@ h6{
         opacity:0.4;
         z-index:100 !important;
     }
-    .phrase {          
-        font-size: 7vw;
+    .phrase {  
+        margin-top:-6%;        
+        font-size: 10vw;
         font-weight: 100;
         letter-spacing: 0.2vw;
     }
-    .titre-principal {    
-        margin-top:42vh; 
-        font-size: 2.8vw;
-        padding-top:13%;
-        padding-bottom:10%;
+    .titre-principal {
+  
+        left: 0;
+         right:0;  
+         margin-top:0; 
+         font-size: 2.8vw;
+        padding-top:-50%;
+    
     }
+ 
 
     .fa-chevron-down{
         top:91%;
@@ -476,16 +554,29 @@ h6{
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   
-    .background-picture{
-        background: url('../images/cosmo_pyramids992.jpg') no-repeat center ;
+ 
+    .logo-jg {
+        z-index:1000;
+        position:absolute;
+        left:0;
+        right:0;
+        height:100vh!important;
+    
+     
+      background: url('../images/cosmo_pyramids992.jpg') no-repeat top ;
+      background-size: cover;
+      
+    
     }
-    .logo {
-        top:20%;
-        left:25%;
-        right: 25%;
-        width:45%;
-        height:45%;
+    
+    #logo-jg {
+       margin-top:20%;
+      width: 45%!important;
+      height: 45%!important;
+    
+    
     }
+
 
   .under-logo{
     top:18vw;
@@ -495,19 +586,35 @@ h6{
     opacity:0.4;
     z-index:100 !important;
  }
-    .phrase {
-        padding-top:4vh;
-        font-size: 9vw;
+
+    .phrase {   
+        padding-top:7vh;
+       left: 0;
+        right:0;      
+        color: var(--main-color-01);
+        font-size:12vw;
         font-weight: 100;
         letter-spacing: 0.3vw;
     }
 
+  
     .titre-principal {
-        margin-top:33vh; 
-        padding-bottom: 0vh;    
-        font-size: 3vw;
-        padding-top:20%;
-        padding-bottom:10%;  
+        z-index: 1000;
+        position:absolute;
+  
+        padding-top:5%; 
+        left:0;
+        right:0;
+       
+        text-transform: uppercase;
+        font-size:2vw;
+        
+       
+        font-weight: 700;
+        color: rgba(255,255,255,0.8);
+        line-height:4vh;
+        text-shadow: 0 0 6px rgba(255,255,255,0.92), 0 0 30px rgba(255,255,255,0.34), 0 0 12px rgba(67,165,190,0.52), 0 0 21px rgba(67,165,190,0.92), 0 0 34px rgba(67,165,190,0.78), 0 0 54px rgba(67,165,190,0.92);
+  
     }
     .fa-chevron-down{
         top:80%;
@@ -543,28 +650,63 @@ h6{
     .title-part-1{
         margin-left:-1.9% !important;
     }
+
+    .figure1 {
+        z-index:200;
+        background: url('../images/cosmo_pyramids992.jpg') no-repeat top ;
+        background-size: cover;
+        width: 100%!important;
+        height: 100%!important;
+        bottom: 0%;
+        left: 0;
+        
+      }
+      
+      .figure2 {
+          z-index:300;
+        background: #CC1B49;
+        background: url('../images/logo-JG-white-opacity.svg');
+        background-repeat: no-repeat;
+        background-size: contain;
+        width: 40%;
+        height: 45%;
+        bottom: 35%;
+        left: 25%;
+      }
+      
+    
+      
+    .figure3  {
+        z-index:250 !important;
+      
+        background: url('../images/white-sunlight992.png') no-repeat center !important;
+        background-repeat: no-repeat;
+        bottom: 0%;
+        left: 0;
+        width: 92%;
+        height: 92%;
+      
+        background-size: cover;
+        opacity:0.7;
+       
+    }
+
+
+    
+    
+    .fa-angle-down{
+        z-index: 1000;
+        color:white;
+        margin-top:0vh;
+      }
 }
 
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
 
-    .background-picture{
-        background: url('../images/cosmo_pyramids1200.jpg') no-repeat bottom ;
-        z-index: 100 !important;
-        background-size: cover;
-     
-        top:0;
-        width: 100%;
-        height: 100%;
-        left:0;
-    }
-   .logo {
-        top:22%;
-        left:25%;
-        right: 25%;
-        width:50%;
-        height:50%;
-    }
+ 
+    
+ 
 
 
    .under-logo {
@@ -577,15 +719,38 @@ h6{
     z-index:100 !important;
 }
 
+
+.logo-jg {
+    z-index:1000;
+    position:absolute;
+    left:0;
+    right:0;
+    height:100vh!important;
+
+ 
+  background: url('../images/cosmo_pyramids1200.jpg') no-repeat top ;
+  background-size: cover;
+  
+
+}
+
+#logo-jg {
+    margin-top:28vh!important; 
+  width: 45%!important;
+  height: 45%!important;
+
+
+}
+
     .phrase {      
-        padding-top:5vh;
-        font-size: 11vw;
+        padding-top:8vh;
+        font-size: 10vw;
         font-weight: 100;
         letter-spacing: 0.2vw;
     }
 
     .titre-principal {   
-        margin-top:40vh; 
+        margin-top:-6vh; 
         
     }
 
@@ -640,39 +805,45 @@ h6{
 /* // Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {   
     .background-picture{
-        background: url('../images/cosmo_pyramids.jpg') no-repeat bottom ;
+        background: url('../images/cosmo_pyramids.jpg') no-repeat center ;
         z-index: 100 !important;
         background-size: cover;
-     
-        top:0;
-        width: 100%;
-        height: 100%;
+      
+        top:-10%;
+        width: 100%!important;
+        height: 100vh;
         left:0;
+        
     }
 
     .logo {
-        top:25%;   
-        margin-left: 0;
-        margin-right: 0;
+        z-index:1000;
+        top:20%;   
+        left:25%;
+        right:25%;
+        width:50%;
         height:50%;
+       
     }
     .under-logo {
         top:12vw;
         left:0;
         right:0;
-        width:100%;
-        height:100%;
+       
+        height:80%;
         opacity:0.3;
         z-index:100 !important;
+      
     }
     .phrase {   
-        padding-top:3vh;
-        margin-left: auto;
-        margin-right: auto;      
+        padding-top:12vh;
+      
         color: var(--main-color-01);
         font-size:7vw;
+        width:100%;
         font-weight: 100;
         letter-spacing: 0;
+    
     }
 
     .centered {
@@ -690,22 +861,54 @@ h6{
         width: 45%;
     }
 
-    .titre-principal {  
-       
-        margin-top:35vh;   
-        font-size: 2vw;
-        padding-top:12%;
-        padding-bottom:7%;    
-    }
 
 
-    .fa-chevron-down{
-        top:90%;
-        font-size:vw !important;
-    }
+
+ 
     .title-part-1{
         margin-left:-5% !important;
     }
+    .titre-principal {  
+       
+        margin-top:-5vh;   
+        font-size: 2vw;
+        padding-top:5%;
+        padding-bottom:7%;    
+       
+    }
+
+    .titre-principal {
+        z-index: 1000;
+        position:absolute;
+        left:0;
+        right:0;
+        top:33vh;
+        text-transform: uppercase;
+        font-size:2vw;
+        width:100%;
+        
+       
+        font-weight: 700;
+        color: rgba(255,255,255,0.8);
+        line-height:4vh;
+        text-shadow: 0 0 6px rgba(255,255,255,0.92), 0 0 30px rgba(255,255,255,0.34), 0 0 12px rgba(67,165,190,0.52), 0 0 21px rgba(67,165,190,0.92), 0 0 34px rgba(67,165,190,0.78), 0 0 54px rgba(67,165,190,0.92);
+        margin-top:35vh;
+    
+    }
+    
+    .fa-angle-down{
+        z-index: 1000;
+        color:white;
+        margin-top:-8vh;
+      }
+
+      #top_apropos{
+          padding-top:50%!important;
+      }
+
+
+
+
 }
 
 /* // FIN DES MEDIASQUERIES */
@@ -874,28 +1077,3 @@ textarea {
         border:2px rgba(255, 255, 255,0.7) solid !important;
         border-radius: 2px!important;
   }
-
-
-
-  
-
-  
-  .titre-principal {
-    position:absolute;
-    left:0;
-    right:0;
-    top:15vh;
-    text-transform: uppercase;
-    font-size:2vw;
-    z-index: 1000;
-    font-weight: 700;
-    color: rgba(255,255,255,0.8);
-    line-height:4vh;
-    text-shadow: 0 0 6px rgba(255,255,255,0.92), 0 0 30px rgba(255,255,255,0.34), 0 0 12px rgba(67,165,190,0.52), 0 0 21px rgba(67,165,190,0.92), 0 0 34px rgba(67,165,190,0.78), 0 0 54px rgba(67,165,190,0.92);
-    
-}
- 
-.fa-angle-down{
-  color:white;
-  margin-top:-5vh;
-}
