--- a/css/style.css
+++ b/css/style.css
@@ -1003,7 +1003,7 @@ h6{
 
 
 
-/*body.modal #site-content{
+body.modal #site-content{
    filter: blur(5px)!important;
     -webkit-filter: blur(1px)!important;
     -moz-filter: blur(1px)!important;
@@ -1011,8 +1011,8 @@ h6{
     -ms-filter: blur(1px)!important;
     
 }
-*/
 
+/*
 .modal-open .container-fluid, .modal-open  .container {
     -webkit-filter: blur(5px) grayscale(90%);
     -moz-filter: blur(5px) grayscale(90%);
@@ -1020,7 +1020,7 @@ h6{
     -ms-filter: blur(5px) grayscale(90%);
     filter: blur(5px) grayscale(90%);
 }
-
+*/
 
 a.btn.btn-outline-primary{
     color:  var(--main-color)!important;
