--- a/css/style.css
+++ b/css/style.css
@@ -1003,23 +1003,25 @@ h6{
 
 
 
-/*body.modal #site-content{
-   filter: blur(5px)!important;
-    -webkit-filter: blur(1px)!important;
-    -moz-filter: blur(1px)!important;
-    -o-filter: blur(1px)!important;
-    -ms-filter: blur(1px)!important;
+.modal-open .container-fluid, .modal-open  .container {
+   filter:  grayscale(90%)!important;
+    -webkit-filter:  grayscale(90%)!important;
+    -moz-filter: grayscale(90%)!important;
+    -o-filter:  grayscale(90%)!important;
+    -ms-filter:  grayscale(90%) !important;
     
-}*/
+}
 
 
+/*
 .modal-open .container-fluid, .modal-open  .container {
     -webkit-filter: blur(5px) grayscale(90%);
-
+ -moz-filter:blur(5px) grayscale(90%);
     -o-filter: blur(5px) grayscale(90%);
     -ms-filter: blur(5px) grayscale(90%);
     filter: blur(5px) grayscale(90%);
 }
+*/
 
 
 a.btn.btn-outline-primary{
