--- a/css/style.css
+++ b/css/style.css
@@ -601,20 +601,11 @@ h6{
 
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  /*
-.modal-open .container-fluid, .modal-open  .container {
-   filter:  grayscale(90%)!important;
-    -webkit-filter:  grayscale(90%)!important;
-    -moz-filter: grayscale(90%)!important;
-    -o-filter:  grayscale(90%)!important;
-    -ms-filter:  grayscale(90%) !important;
-    
-}
 
-*/
+
 
 .modal-open .container-fluid, .modal-open  .container {
-    -webkit-filter: blur(5px) grayscale(90%);
+    -webkit-filter: blur(5px) grayscale(90%)!important;
     -moz-filter:blur(5px) grayscale(90%);
     -o-filter: blur(5px) grayscale(90%);
     -ms-filter: blur(5px) grayscale(90%);
